[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0"
anyhow = "1"
dyn-clone = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
