[package]
name = "samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipeline = { path = "../pipeline" }
anyhow = "1"
async-trait = "0"
tokio = { version = "1", features = ["full"] }
dyn-clone = "1"
futures = "0"
tracing = "0"
